--- a/references.bib
+++ b/references.bib
@@ -13,16 +13,16 @@
 }
 
 @Article{AalderingBoehm2019,
-  langid       = {english},
-  author       = {Hillie Aaldering and Robert B{\"{o}}hm},
+  author       = {Hillie Aaldering and Robert Böhm},
   date         = {2019-04},
-  doi          = {10.1177/1948550619841627},
   journaltitle = {Social Psychological and Personality Science},
+  title        = {Parochial Versus Universal Cooperation: Introducing a Novel Economic Game of Within- and Between-Group Interaction},
+  doi          = {10.1177/1948550619841627},
   number       = {1},
   pages        = {36--45},
-  title        = {Parochial Versus Universal Cooperation: Introducing a Novel Economic Game of Within- and Between-Group Interaction},
   volume       = {11},
   creationdate = {2023-09-27T11:07:26},
+  langid       = {english},
   publisher    = {{SAGE} Publications},
 }
 
