--- a/bibliography-masterfile.bib
+++ b/bibliography-masterfile.bib
@@ -197,7 +197,7 @@ Graph Algorithms for Data Science shows you how to construct and analyze graphs 
   isbn      = {9781098171261},
   location  = {Sebastopol},
   publisher = {O'Reilly},
-  subtitle  = {Powerful Object-Oriented programming},
+  subtitle  = {Powerful Object-Oriented Programming},
   abstract  = {Get a comprehensive, in-depth introduction to the core Python language with this hands-on book. Based on author Mark Lutz's popular training course, this updated sixth edition will help you quickly write efficient, high-quality code with Python. It's an ideal way to begin, whether you're new to programming or a professional developer versed in other languages.
 
 Complete with quizzes, exercises, and helpful illustrations, this easy-to-follow self-paced tutorial gets you started with Python 3.12 and all other releases in use today. With a pragmatic focus on what you need to know, it also introduces some advanced language features that have become increasingly common in Python code.},
